--- a/1-lang-overview/temperature.html
+++ b/1-lang-overview/temperature.html
@@ -64,24 +64,41 @@
         console.log("---------------------")
         console.log("PART 1...")
 
-
-
+        var tempC = -270
+        var tempF = 9/5 * tempC + 32
+        console.log("Part 1 - Celcius: ", tempC)
+        console.log("Part 1 - Fahrenheit: ", tempF)
 
 
         console.log("---------------------")
         console.log("PART 2...")
 
+        function calculateTemp(c) {
+            return 9/5 * c + 32
+        }
 
-
-
+        var tempC = -270
+        var tempF = calculateTemp(tempC)
+        console.log("Part 2 - Celcius: ", tempC)
+        console.log("Part 2 - Fahrenheit: ", tempF)
 
 
         console.log("---------------------")
         console.log("PART 3...")
 
+        var btn = document.getElementById("calculate")
+        var inputC = document.getElementById("input-temp-c")
+        var displayF = document.getElementById("display-temp-f")
+        
+        function submit() {
+            var tempC = inputC.value
+            var tempF = calculateTemp(tempC)
+            console.log("Part 3 - Celcius: ", tempC)
+            console.log("Part 3 - Fahrenheit: ", tempF)
 
-
-
+            displayF.innerText = tempF
+        }
+        btn.addEventListener("click", submit, false)
 
     </script>
 </body>
