--- a/2-control-flow/investments.html
+++ b/2-control-flow/investments.html
@@ -46,7 +46,28 @@
         and display the resulting number of years and actual ending balance on the page.
     </p>
 
+    <h3>Investments Simulation:</h3>
+    <label>Please enter Starting Balance:</label>
+    <input id="input-start-bal" type="number" placeholder="15000" value=""></input><br><br>
+    <label>Please enter Ending Balance:</label>
+    <input id="input-end-bal" type="number" placeholder="1000000" value=""></input><br><br>
+    <label>Please enter Mean:</label>
+    <input id="input-mean" type="number" placeholder="0.08" value=""></input><br><br>
+    <label>Please enter Standard Deviation:</label>
+    <input id="input-std" type="number" placeholder="0.15" value=""></input><br><br>
+    <button id="calculate">Calculate</button>
 
+
+    <br><br>
+    <label><b>No. of Years:</b></label>
+    <span id="endYears">TODO</span>
+
+    <br><br>
+    <label><b>Actual Ending Balance:</b></label>
+    <span id="endBalResult">TODO</span>
+
+    <br><br>
+    <br><br>
 
     <script src="https://cdn.jsdelivr.net/npm/d3-random@3"></script>
     <script type="text/javascript">
@@ -58,23 +79,65 @@
         console.log("---------------------")
         console.log("PART 1...")
 
+        var balance = 150000
+        var year = 0
 
+        while (balance < 1000000) {
+            year = year + 1
+            balance = balance * 1.08
+            console.log("Part 1: " + year, balance)
 
-
-
+        }
+        console.log("Part 1: DONE")
+        console.log("Part 1:" + year, balance)
+            
 
         console.log("---------------------")
         console.log("PART 2...")
 
+        var balance = 150000
+        var year = 0
+        var rateGenerator = d3.randomNormal(0.08, 0.15)
 
+        while (balance < 1000000) {
+            var rate = rateGenerator()
+            year = year + 1
+            balance = balance * (1 + rate)
+            console.log("Part 2: Year: " + year + ", Balance: " + formatUSD(balance) + ", Rate:" + rate)
+        }
 
-
+        console.log("Part 2: DONE")
+        console.log("Part 2:" + year, balance)
 
 
         console.log("---------------------")
         console.log("PART 3...")
 
 
+        
+        var btn = document.getElementById("calculate")
+        function submit() {            
+            var startBal = document.getElementById("input-start-bal").value
+            var endBal = document.getElementById("input-end-bal").value
+            var mean = document.getElementById("input-mean").value
+            var std = document.getElementById("input-std").value
+            var endYears = document.getElementById("endYears")
+            var endBalResult = document.getElementById("endBalResult")
+            var year = 0
+            var newRateGenerator  = d3.randomNormal(mean, std)
+            while (Number(startBal) < Number(endBal)) {
+                var rate = newRateGenerator()
+                year = year + 1
+                startBal = startBal * (1 + rate)
+                console.log("Part 3: Year: " + year + ", Balance: " + formatUSD(startBal) + ", Rate:" + rate)
+            }
+            endYears.innerText = year
+            endBalResult.innerText = formatUSD(startBal)
+            console.log("Part 3: DONE")
+            console.log("Part 3:" + year, startBal, rate)
+        }
+
+        btn.addEventListener("click", submit, false)
 
 
     </script>
