--- a/2-control-flow/umbrella.html
+++ b/2-control-flow/umbrella.html
@@ -71,22 +71,47 @@
         console.log("---------------------")
         console.log("PART 1...")
 
+        var isRaining = true
+        var ownsUmbrella = false
 
-
-
+        if(isRaining === true) {
+            if(ownsUmbrella === true) {
+                console.log("Bring your umbrella")
+            } else {
+                console.log("Buy an umbrella")
+            }
+        } else {
+            console.log("Skies are clear")
+        }
 
         console.log("---------------------")
         console.log("PART 2...")
 
-
-
-
+        function advise(isRaining, ownsUmbrella) {
+            if(isRaining === true) {
+                if(ownsUmbrella === true) {
+                    return "Bring your umbrella"
+                } else {
+                    return "Buy an umbrella"
+                }
+            } else {
+                return "Skies are clear"
+            }
+        }
+        console.log(advise(true, true))
+        console.log(advise(true, false))
+        console.log(advise(false, true))
+        console.log(advise(false, false))
 
         console.log("---------------------")
         console.log("PART 3...")
 
-
-
+        var btn = document.getElementById("advise")
+        function submit() {
+            var displaySpan = document.getElementById("display-message")
+            displaySpan.innerText = advise(document.getElementById("switch-raining").checked, document.getElementById("switch-umbrella").checked)
+        }
+        btn.addEventListener("click", submit, false)
 
 
     </script>
