--- a/4-fetching-json-data/movies.html
+++ b/4-fetching-json-data/movies.html
@@ -86,7 +86,17 @@
                 console.log("---------------------")
                 console.log("PART 1...")
 
+                // A. Total number of movies
+                console.log(`Number of movies: ${data.length}`);
 
+                // B. Display title and year of each movie
+                data.forEach(movie => {
+                console.log(`askjhdakjhsdakd ${movie.Title} (${movie.Year})`);
+                });
+
+                // C. Movie with highest rating
+                const topMovie = data.reduce((max, movie) => movie.Rating > max.Rating ? movie : max, data[0]);
+                console.log(`Top-rated movie: ${topMovie.Title} (${topMovie.Rating}/10)`);
 
 
 
@@ -95,11 +105,40 @@
                 console.log("PART 2...")
 
 
+                const dropdown = document.getElementById("select-movie");
 
+            // A. Populate the dropdown
+            data.forEach(movie => {
+                const option = document.createElement("option");
+                option.value = movie.Id;
+                option.textContent = movie.Title;
+                dropdown.appendChild(option);
+            });
 
+            // B. Function to update display
+            function updateMovieInfo() {
+            const selectedId = dropdown.value;
+            const selectedMovie = data.find(movie => movie.Id === selectedId);
+            if (!selectedMovie) return;
 
+            document.getElementById("display-title").textContent = selectedMovie.Title;
+            document.getElementById("display-year").textContent = selectedMovie.Year;
+            document.getElementById("display-rating").textContent = selectedMovie.Rating;
+
+            const imageContainer = document.getElementById("image-container");
+            imageContainer.innerHTML = ""; // Clear previous image
+            const img = document.createElement("img");
+            img.src = selectedMovie['Thumbnail Image URL'];
+            img.alt = selectedMovie.Title;
+            img.width = 200;
+            imageContainer.appendChild(img);
+            }
+
+            // C. Add event listener
+            dropdown.addEventListener("change", updateMovieInfo);
             })
-            .catch(err => console.log(err))
+            .catch(err => console.log("Error loading data:", err));
+
 
     </script>
 </body>
