--- a/6-apis/market-status.html
+++ b/6-apis/market-status.html
@@ -92,14 +92,40 @@
             console.log("---------------------")
             console.log("PART 1...")
 
+            const markets = data.markets;
+            console.log(`Total markets: ${markets.length}`);
 
+            const equityMarkets = markets.filter(m => m.market_type === "Equity");
+            console.log(`Equity markets: ${equityMarkets.length}`);
+
+            equityMarkets.forEach(m => {
+                console.log(`Type: ${m.market_type}, Region: ${m.region}`);
+            });
+
+            const market = equityMarkets.find(m => m.region === "United States");
+
+            if (market) {
+                console.log("US Market Info:");
+                console.log(`Type: ${market.market_type}`);
+                console.log(`Exchanges: ${market.primary_exchanges}`);
+                console.log(`Open: ${market.local_open}`);
+                console.log(`Close: ${market.local_close}`);
+                console.log(`Status: ${market.current_status.toUpperCase()}`);
 
 
 
             console.log("---------------------")
             console.log("PART 2...")
 
-
+            document.getElementById("display-region").textContent = market.region;
+            document.getElementById("display-type").textContent = market.market_type;
+            document.getElementById("display-exchanges").textContent = market.primary_exchanges;
+            document.getElementById("display-open").textContent = market.local_open;
+            document.getElementById("display-close").textContent = market.local_close;
+            document.getElementById("display-status").textContent = market.current_status.toUpperCase();
+        } else {
+            console.warn("United States equity market not found.");
+        }
 
 
         }).catch(function(error) {
